--- a/RegisAndLogin/RegisAndLogin/RegisAndLogin.csproj
+++ b/RegisAndLogin/RegisAndLogin/RegisAndLogin.csproj
@@ -133,7 +133,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Extended\user.cs" />
+    <Compile Include="Models\Extended\User.cs" />
     <Compile Include="Models\MyModels.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
