--- a/RegisAndLogin/RegisAndLogin/RegisAndLogin.csproj
+++ b/RegisAndLogin/RegisAndLogin/RegisAndLogin.csproj
@@ -130,6 +130,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Data\Questions.cs" />
+    <Compile Include="Data\Topics.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -152,6 +154,7 @@
     <Compile Include="Models\user.cs">
       <DependentUpon>MyModels.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Extended\UserLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -212,6 +215,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\User\Registration.cshtml" />
+    <Content Include="Views\User\Login.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
